syntax = "proto3";

package prototype;

option go_package = "github.com/coschain/contentos-go/prototype";
option java_package = "io.contentos.android.sdk.prototype";

message account_name{
    string value = 1;
}

message chain_id{
    uint32 value = 1;
}

message coin{
    uint64 value = 1 [jstype = JS_STRING];
}

message vest{
    uint64 value = 1 [jstype = JS_STRING];
}

message public_key_type{
    bytes data = 1;
}

message private_key_type{
    bytes data = 1;
}

message time_point_sec{
    uint32 utc_seconds = 1;
}

message signature_type{
    bytes sig = 1;
}

message sha256{
    bytes hash = 1;
}

message gift_ticket_key_type {
    uint32 type = 1;
    string from = 2;
    string to = 3;
    uint64 create_block = 4;
}

message chain_properties{
    coin account_creation_fee = 1;
    uint64 stamina_free       = 2;
    uint64 tps_expected       = 3;
    uint32 top_n_acquire_free_token = 4;
    uint64 epoch_duration = 5;
    prototype.coin per_ticket_price = 6;
    uint64 per_ticket_weight = 7;
}

message dynamic_properties {
    prototype.sha256             head_block_id                 =      1;
    uint64                       head_block_number             =      2;
    prototype.coin               total_cos                     =      3;
    prototype.time_point_sec     time                          =      4;
    prototype.account_name       current_block_producer        =      5;
    uint32                       tps                           =      6;
    prototype.vest               total_vest                    =      7;
    uint64   total_trx_cnt = 8;
    uint64   total_post_cnt = 9;
    uint64   total_user_cnt = 10;
    uint32   max_tps = 11;
    uint64   max_tps_block_num = 12 [jstype = JS_STRING] ;
    uint32   ith_year = 13;
    prototype.vest   annual_budget = 14;
    prototype.vest   annual_minted = 15;
    prototype.vest   pool_post_rewards = 16;
    prototype.vest   pool_reply_rewards = 17;
    prototype.vest   pool_vote_rewards = 18;
    prototype.vest   pool_dapp_rewards = 19;
    string           weighted_vps_post = 20;
    string           weighted_vps_reply = 21;
    string           weighted_vps_vote = 22;
    string           weighted_vps_dapp = 23;
    prototype.vest   claimed_post_rewards = 24;
    prototype.vest   claimed_reply_rewards = 25;
    prototype.vest   claimed_vote_rewards = 26;
    prototype.vest   claimed_dapp_rewards = 27;
    prototype.vest   stake_vest = 28;
    bool  block_producer_boot_completed = 29;
    uint64 stamina_free = 30;
    uint64 tps_expected = 31;
    uint64                       avg_tps_update_block             =      32;
    uint64                       avg_tps_in_window = 33;
    uint64                       one_day_stamina = 34;
    prototype.coin               account_create_fee = 35;
    prototype.account_name    reputation_admin = 36;
    uint64             current_epoch_start_block    = 37;
    uint64             epoch_duration = 38;
    uint32             top_n_acquire_free_token = 39;
    prototype.coin     per_ticket_price = 40;
    uint64             per_ticket_weight = 41;
    prototype.vest     tickets_income = 42;
    uint64             charged_tickets_num = 43;
    prototype.account_name    copyright_admin = 44;
    prototype.vest     tickets_bp_bonus = 45;
}

message beneficiary_route_type{
    account_name    name    = 1;
    uint32          weight  = 2;
}
